AC_INIT(src/main.cpp)
AM_INIT_AUTOMAKE(sxc, ["0.0-prealpha"])
AC_DEFINE_UNQUOTED(COPYRIGHT, ["2008 Andreas Waidler, Dennis Felsing"], [Copyright information.])

AM_CONFIG_HEADER(src/config.h)

AC_PROG_INSTALL
AC_PROG_RANLIB

CXXFLAGS=

AC_PROG_CXX
AC_LANG_CPLUSPLUS
AC_PROG_MAKE_SET

AC_HEADER_STDC

PKG_CHECK_MODULES(DEPS, gloox >= 0.9)
AC_SUBST(DEPS_CFLAGS)
AC_SUBST(DEPS_LIBS)

AC_OUTPUT(Makefile src/Makefile src/Contact/Makefile src/Control/Makefile src/Control/File/Makefile src/Exception/Makefile src/File/Makefile src/Option/Makefile)
