noinst_LTLIBRARIES = libTime.la
libTime_la_CPPFLAGS = $(GLOOX_CFLAGS)
# libTime_la_LIBADD = 
libTime_la_SOURCES = DateTime.cxx DateTimeFormat.cxx IsoDateTimeFormat.cxx LocalDateTime.cxx Timestamp.cxx
noinst_HEADERS = DateTime.hxx DateTimeFormat.hxx IsoDateTimeFormat.hxx LocalDateTime.hxx Timestamp.hxx
