noinst_LTLIBRARIES = libFile.la
libFile_la_CPPFLAGS = $(GLOOX_CFLAGS) $(CPPUNIT_CFLAGS)
libFile_la_CXXFLAGS = $(GLOOX_LIBS) $(CPPUNIT_LIBS)
libFile_la_LIBADD =\
    @top_srcdir@/src/Exception/libException.la\
    @top_srcdir@/src/File/libFile.la
libFile_la_SOURCES = InputDummy.cxx TestInputDummy.cxx
