noinst_LTLIBRARIES = libFile.la
libFile_la_CPPFLAGS = $(CPPUNIT_CFLAGS) $(GLOOX_CFLAGS)
libFile_la_CXXFLAGS = $(CPPUNIT_LIBS) $(GLOOX_LIBS)
libFile_la_SOURCES = InputDummy.cxx OutputDummy.cxx TestInput.cxx TestOutput.cxx
libFile_la_LIBADD  = @top_srcdir@/src/Exception/libException.la @top_srcdir@/src/File/libFile.la
