noinst_LTLIBRARIES = libTime.la
libTime_la_CPPFLAGS = $(CPPUNIT_CFLAGS) $(GLOOX_CFLAGS)
libTime_la_CXXFLAGS = $(CPPUNIT_LIBS) $(GLOOX_LIBS)
libTime_la_SOURCES = TestDateTimeFormat.cxx TestIsoDateTimeFormat.cxx TestLocalDateTime.cxx TestTimestamp.cxx
libTime_la_LIBADD  = @top_srcdir@/src/Time/libTime.la
