noinst_LTLIBRARIES = libOption.la
libOption_la_CPPFLAGS = -I$(top_srcdir)/include $(GLOOX_CFLAGS) $(CPPUNIT_CFLAGS)
libOption_la_CXXFLAGS = $(GLOOX_LIBS) $(CPPUNIT_LIBS)
libOption_la_LIBADD = $(top_srcdir)/src/Option/libOption.la $(top_srcdir)/src/Exception/libException.la
libOption_la_SOURCES = OptionTest.cxx OptionTest.hxx
