noinst_LTLIBRARIES = libException.la
libException_la_CPPFLAGS = $(GLOOX_CFLAGS) $(LIBSXC_CFLAGS)
libException_la_SOURCES = CouldNotAdd.cxx CouldNotExecute.cxx CouldNotParse.cxx CouldNotSet.cxx Exception.cxx NotParsed.cxx
noinst_HEADERS = CouldNotAdd.hxx CouldNotExecute.hxx CouldNotParse.hxx CouldNotSet.hxx Exception.hxx NotParsed.hxx
