noinst_LTLIBRARIES = libContactFile.la
libContactFile_la_CPPFLAGS = $(GLOOX_CFLAGS)
# libContactFile_la_LIBADD = ../../File/libFile.la ../../Account/libAccount.la
libContactFile_la_LIBADD = ../../Time/libTime.la ../../File/libFile.la
libContactFile_la_SOURCES = Info.cxx Input.cxx Output.cxx
noinst_HEADERS = Info.ixx Info.hxx Input.hxx Output.hxx
