noinst_LTLIBRARIES = libFileException.la
libFileException_la_CPPFLAGS = $(LIBSXC_CFLAGS)
libFileException_la_SOURCES = \
  errnoToException.cxx \
  AccessDenied.cxx \
  BadFile.cxx \
  BadPath.cxx \
  CloseFailed.cxx \
  FileExists.cxx \
  FileLocked.cxx \
  FileMissing.cxx \
  OpenFailed.cxx \
  ReadFailed.cxx \
  WriteFailed.cxx
