noinst_LTLIBRARIES = libFileException.la
libFileException_la_CPPFLAGS = $(LIBSXC_CFLAGS)
libFileException_la_SOURCES = \
  errnoToException.cxx \
  AccessDenied.cxx \
  BadFile.cxx \
  BadPath.cxx \
  CloseFailed.cxx \
  FileExists.cxx \
  FileLocked.cxx \
  FileMissing.cxx \
  OpenFailed.cxx \
  ReadFailed.cxx \
  WriteFailed.cxx
noinst_HEADERS = \
  errnoToException.hxx \
  AccessDenied.hxx \
  BadFile.hxx \
  BadPath.hxx \
  CloseFailed.hxx \
  FileExists.hxx \
  FileLocked.hxx \
  FileMissing.hxx \
  OpenFailed.hxx \
  ReadFailed.hxx \
  WriteFailed.hxx
